[tool.poetry]
name = "image-registration"
version = "0.1.0"
description = ""
authors = ["Yusuke Kondo <kondounagi@gmail.com>"]
readme = "README.md"
packages = [{include = "image_registration"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
